# mud

tacp/src/: CMakeLists.txt  debug.c  debug.h  lora.h  protocols.c  protocols.h  tacp.c  tacp.h  things_tiny_id.c  things_tiny_id.h
tacp/tests/: CMakeLists.txt  protocols_test.c  tacp_test.c  things_tiny_id_test.c
thing/src/: thing.c  thing.h
thing/tests/: thing_test.c
